# Verdict

./: .env.example  .gitignore  AGENTS.md  API_REFERENCE.md  CODEBASE_CONTEXT.md  CONTRIBUTING.md  CORS_FIX_COMPLETE.md  CORS_RESOLUTION_SUMMARY.md  DOCUMENTATION_INDEX.md  EXAMPLES.md  GEMINI_INTEGRATION_SUMMARY.md  GEMINI_SETUP.md  HANDOFF.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  INTEGRATION_TEST.md  Makefile  OPTIMIZATION_COMPLETE.md  PERFORMANCE_OPTIMIZATIONS.md  PROJECT_COMPLETION_SUMMARY.md  QUICKSTART.md  QUICK_START_CORS_FIXED.md  README.md  SDK_IMPLEMENTATION_SUMMARY.md  SDK_INTEGRATION_GUIDE.md  STARTUP_SCRIPTS.md  TEST_EXECUTION_REPORT.txt  TEST_SUMMARY.md  check-health.sh  hallucination_test_prompts.md  hallucination_test_results.json  pyproject.toml  pyrightconfig.json  start-all.sh  stop-all.sh  test_hallucinations.py  test_performance.py
GuardlyFrontend/: README.md  next.config.js  package-lock.json  package.json  start-all.sh  tailwind.config.ts  tsconfig.json
GuardlyFrontend/src/app/: globals.css  layout.tsx  page.tsx
GuardlyFrontend/src/app/settings/: page.tsx
GuardlyFrontend/src/hooks/: useGuardly.ts
GuardlyFrontend/src/lib/: guardly-client.ts
GuardlyFrontend/src/types/: guardly.ts
docs/: DEPLOYMENT.md  NODE_SDK_USAGE.md  PROMPT_STRUCTURE.md  REST_API.md
examples/: flask_api_server.py  gemini_armoriq_example.py  gemini_rag_example.py  gemini_validation_demo.py  node_sdk_client.ts  node_sdk_example.ts  structured_prompt_example.py  test_unified_pipeline.py
frontend/: MIDDLEWARE.md  README.md  app.py  errors.py  example_with_middleware.py  middleware.py  run.py  schemas.py  service.py
frontend/routes/: __init__.py  health.py  validate.py
frontend/static/css/: styles.css
frontend/static/js/: app.js
frontend/templates/: error.html  index.html
guardly-node-sdk/: ARCHITECTURE.md  EXAMPLES.md  PROJECT_SUMMARY.md  README.md  USAGE.md
guardly-node-sdk/src/: client.ts  errors.ts  index.ts  retry.ts  test.ts  types.ts
hallucination_guard/: FLOW_DIAGRAM.txt  THINKING_FLOW.md  __init__.py
hallucination_guard/cli/: eval.py
hallucination_guard/core/: __init__.py  decision.py  exceptions.py  guard.py  pipeline.py  trace.py
hallucination_guard/integrations/: __init__.py  armoriq.py  gemini_wrapper.py  langchain.py  llama_wrapper.py
hallucination_guard/policy/: __init__.py  loader.py  schema.py
hallucination_guard/preprocessing/: __init__.py  context_manager.py  ground_truth.py  prompt_analyzer.py  prompt_compactor.py
hallucination_guard/prompts/: __init__.py  schema.py
hallucination_guard/validators/: __init__.py  base.py  content_classifier.py  embedding.py  hhem.py  lynx.py  prompt_injection.py  prompt_structure.py  safety.py
policies/: chatbot.yaml  default.yaml  development.yaml  rag_strict.yaml  safe.yaml
sdks/node/: README.md  package-lock.json  package.json  tsconfig.json
sdks/node/src/: client.ts  index.ts  retry.ts  types.ts  utils.ts
server/: README.md  __init__.py  config.py  gemini_generator.py  middleware.py  routes.py  run.py  schemas.py
src/: __init__.py
src/cli/: __init__.py  eval.py
src/core/: __init__.py  decision.py  guard.py  model_cache.py  pipeline.py  trace.py
src/integrations/: __init__.py  armoriq.py  gemini_wrapper.py  langchain.py  llama_wrapper.py
src/policy/: __init__.py
src/policy/defaults/: no_prompt_check.yaml  rag_strict.yaml
src/preprocessing/: __init__.py  context_manager.py  ground_truth.py  prompt_analyzer.py  prompt_compactor.py
src/prompts/: __init__.py  schema.py
src/validators/: __init__.py  base.py  content_classifier.py  embedding.py  heuristics.py  hhem.py  lynx.py  prompt_structure.py  safety.py
tests/: test_armoriq.py  test_armoriq_integration.py  test_context_manager.py  test_decision.py  test_ground_truth.py  test_guard.py  test_hhem.py  test_integration.py  test_integration_e2e.py  test_integration_sdk_server.py  test_middleware.py  test_pipeline.py  test_preprocessing.py  test_preprocessing_integration.py  test_prompt_analyzer.py  test_prompt_compactor.py  test_prompt_injection.py  test_prompt_structure.py  test_routes.py  test_server.py  test_service.py  test_thinking_armoriq.py  test_trace.py  test_validators.py
