[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verdict"
version = "0.1.0"
description = "Vendor-neutral Python SDK for preventing AI hallucinations through inline validation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Verdict Team"}
]
keywords = ["ai", "hallucination", "validation", "llm", "rag", "safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.7,<3.0",
    "pyyaml>=6.0,<7.0",
    "sentence-transformers>=3.1,<4.0",
    "torch>=2.3,<3.0",
    "transformers>=4.44,<5.0",
    "numpy>=1.26,<2.0",
]

[project.optional-dependencies]
gemini = [
    "google-generativeai>=0.3.0",
]
langchain = [
    "langchain-core>=0.1.0",
]
observability = [
    "langfuse>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "datasets>=2.14.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "locust>=2.15.0",
    "flask>=2.0.0",
    "python-dotenv>=1.0.0",
]
all = [
    "verdict[gemini,langchain,observability,dev]",
]

[project.scripts]
verdict = "verdict.cli.eval:app"

[project.urls]
Homepage = "https://github.com/Verdict/verdict"
Documentation = "https://github.com/Verdict/verdict#readme"
Repository = "https://github.com/Verdict/verdict"
Issues = "https://github.com/Verdict/verdict/issues"

[tool.setuptools.package-dir]
verdict = "src"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src.policy.defaults" = ["*.yaml"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "transformers.*",
    "torch.*",
    "google.generativeai.*",
    "langchain.*",
    "langfuse.*",
    "datasets.*",
    "locust.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["verdict"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

